--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="header">
+        <img src="/képek/pizzakep.jpg" alt="">
+        
+
+    </div>
+
+
+    <div class="Piadina"></div>
+    <div class="Menu"></div>
+    <div class="special"></div>
+    <div class="footer"></div>
 </body>
 </html>
