--- a/index.html
+++ b/index.html
@@ -4,19 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizzéria</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="header">
-        <img src="/képek/pizzakep.jpg" alt="">
-        
 
-    </div>
+    <header class="header">
+        <nav>
+            <h1 class="logo">Pizzéria</h1>
+    
+            <ul class="menu">
+                <li><a href="#">Kezdőlap</a></li>
+                <li><a href="#">Menü</a></li>
+                <li><a href="#">Rólunk</a></li>
+                <li><a href="#">Kapcsolat</a></li>
+            </ul>
+        </nav>
+    </header>
 
 
-    <div class="Piadina"></div>
+     <div class="Piadina"></div>
     <div class="Menu"></div>
     <div class="special"></div>
     <div class="footer"></div>
+
 </body>
 </html>
