--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
             </div>
    
             <div class="nyitvatartas">
+                <hr class="hr-logo">
                 <h3>NYITVA</h3>
    
                 <p>Hétfő:<br> zárva</p>
