--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 
      <div class="menu-section">
-        <h3 class="menube-m">— MENÜ —</h3>
+        <h3 >— MENÜ —</h3>
         <h4>Ajánlatunk</h4>
         <p>
             Itt kezdődhet a szöveged. Kattints ide, és kezdheted is az írást.
@@ -135,7 +135,7 @@
             </div>
    
         </div>
-   
+
         <div class="elerhetoseg">
             <p>Piadina Pizzéria, 1013 Budapest, Clark Ádám tér 1., +36-67-632-456</p>
             <p>Az oldalt a Webnode működteti</p>
