--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="footer-container">
    
             <div class="varunk">
-                <h2>SZERETETTEL<br>VÁRUNK</h2>
+                <h2>SZERETETTEL <br>VÁRUNK</h2>
             </div>
    
             <div class="nyitvatartas">
@@ -137,7 +137,7 @@
         </div>
 
         <div class="elerhetoseg">
-            <p>Piadina Pizzéria, 1013 Budapest, Clark Ádám tér 1., +36-67-632-456</p>
+            <p>Piadina Pizzéria, 1013 Budapest, Clark Ádám tér <div class="ber">1., +36-67-632-456</div></p>
             <p>Az oldalt a Webnode működteti</p>
         </div>
    
